Edited Navbar Links

--- a/src/components/projects/Project.css
+++ b/src/components/projects/Project.css
@@ -27,6 +27,7 @@
     text-align: center;
   }
   .repo-cards-div-main{
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    display: flex;
+    flex-direction: column;
   }
 }
